<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_home_to_scan"
            app:destination="@id/scanFragment" />
    </fragment>

    <fragment
        android:id="@+id/scanFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.ScanFragment"
        android:label="@string/scan_title">
        <action
            android:id="@+id/action_scan_to_results"
            app:destination="@id/resultsFragment" />
    </fragment>

    <fragment
        android:id="@+id/resultsFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.ResultsFragment"
        android:label="@string/results_title" />
</navigation>
